--- a/assets/style.css
+++ b/assets/style.css
@@ -238,6 +238,7 @@ body {
 
 .adjust_table_chart_margin {
    margin-top: 20px;
+   margin-bottom: 100px;
 }
 
 .adjust_first_card:hover {
@@ -333,4 +334,23 @@ body {
 .over_ride_text_on_chart {
    display: flex;
    flex-direction: row;
+}
+
+.footer_text{
+   display: flex;
+   flex-direction: row;
+   color: white;
+   line-height: 1.2;
+}
+
+.footer_content {
+   display: flex;
+   flex-direction: row;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
+   height: 50px;
+   justify-content: center;
+   align-items: center;
+   background-color: rgb(23,25,36);
 }
